# wexion

./: .gitignore  LICENSE  README.md
backend/: README_AUTH.md  TESTING.md  config.yaml  pyproject.toml  test_api.sh  verify_env.sh
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  init_db.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: auth.py  users.py
backend/driver/: playwright_test.py
backend/tests/: conftest.py  test_auth.py  test_auth_router.py  test_dependencies.py  test_utils.py
docs/: 2026-01-31-auth-system-design.md
docs/plans/: 2026-01-31-auth-system.md
frontend/: README.md
frontend/components/: api.ts
frontend/pages/home/: +Page.vue  +config.ts  +data.ts
frontend/pages/index/: +Page.vue
frontend/pages/login/: +Page.vue  +config.ts
