[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "apscheduler==3.11.2",
    "bcrypt==4.2.1",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.4",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "fastapi-cli==0.0.20",
    "fastapi-cloud-cli==0.11.0",
    "fastar==0.8.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "orjson==3.11.6",
    "packaging==26.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright==1.57.0",
    "pluggy==1.6.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.12.0",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.7.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "python-slugify==8.0.4",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "requests==2.32.5",
    "rich==14.3.1",
    "rich-toolkit==0.17.2",
    "rignore==0.7.6",
    "sentry-sdk==2.51.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.46",
    "starlette==0.50.0",
    "text-unidecode==1.3",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
